--- a/boilerplate/web/templates/session/new.html.eex
+++ b/boilerplate/web/templates/session/new.html.eex
@@ -10,4 +10,5 @@
         <label for="password">Password</label>
         <%= password_input f, :password, placeholder: "password", class: "form-control" %>
     </div>
+    <%= submit "Login", class: "btn btn-primary" %>
 <% end %>
