Fixing Calling of render function

--- a/boilerplate/web/templates/page/index.html.eex
+++ b/boilerplate/web/templates/page/index.html.eex
@@ -39,6 +39,6 @@
   <%= if @current_user do %>
     You're logged in!
   <%= else %>
-    <%= render SessionView, "new.html", conn: @conn %>
+    <%= render Boilerplate.SessionView, "new.html", conn: @conn %>
   <% end %>
 </div>
