Adding resources to front page

--- a/boilerplate/web/templates/page/index.html.eex
+++ b/boilerplate/web/templates/page/index.html.eex
@@ -1,10 +1,20 @@
 <div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
-  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
+  <h2><%= gettext "Welcome to %{name}", name: "Phoenix Boilerplate!" %></h2>
+  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.
+  <br />
+  This project already includes some useful functionalities and will be adding more
+  in the future. </p>
 </div>
 
 <div class="row marketing">
-  <div class="col-lg-6">
+  <div class="col-lg-4">
+    <h4> Functionalities</h4>
+    <ul>
+      <li><%= link "Login", to: session_path(@conn, :new) %></li>
+      <li><%= link "Register", to: user_path(@conn, :register) %></li>
+    </ul>
+  </div>
+  <div class="col-lg-4">
     <h4>Resources</h4>
     <ul>
       <li>
@@ -19,7 +29,7 @@
     </ul>
   </div>
 
-  <div class="col-lg-6">
+  <div class="col-lg-4">
     <h4>Help</h4>
     <ul>
       <li>
